--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+#sections-container{
+  display: flex;
+  justify-content: space-around;
+  max-width: 1080px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer-copy{
+  width: 1080px;
+  display: flex;
+  justify-content:flex-start;
+  background-color: rgba(0,0,0,.32);
+  color: #666;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.footer{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100% ;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.footer-column{
+  width: calc(100% / 3);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer-section-title{
+  font-size: 20px;
+  font-family: cooperboldbt;
+  font-weight: 500;
+  color: #f4b995;
+  line-height: 20px;
+
 }
