--- a/src/App.css
+++ b/src/App.css
@@ -48,12 +48,13 @@ p {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 30px 10%;
-  width: 100%;
+  padding: 20px 10%;
+  width:100% ;
   background: #ffffff;
   line-height: 23px;
   font-weight: 600;
-  max-width: 1200px;
+  max-width: 1126px;
+  height: 90px;
 }
 
 li,
@@ -76,7 +77,7 @@ a {
 
 .nav__list li {
   display: inline-block;
-  padding: 0 20px 10px 20px;
+  padding: 0 20px;
 }
 
 .nav__list li a {
@@ -89,4 +90,46 @@ a {
 
 input {
   margin-left: 20px;
+}
+
+/*TopSection*/
+.main {
+  display: flex;
+  width: 1425px;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  height: 665px;
+  background-color:#F4F3F5 ;
+padding:1 rem ;}
+
+.intro{
+  text-align: center;
+  line-height: 24px;
+  padding-top: 200px;
+  padding-bottom: 175px;
+  display:flex-start;
+}
+
+img{
+  border: 5px;
+  margin: auto;
+max-width: 390px;
+
+
+}
+
+h1{
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.title{
+font-family: "Roboto",sans-serif;
+    color: #ee5f5f!important;
+    font-size: 40px;
+    text-align: center;
+    padding-bottom: auto;
+    height: 70px;
 }
