--- a/src/App.css
+++ b/src/App.css
@@ -44,53 +44,94 @@ p {
 /*NavBar*/
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 
-.header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 20px 10%;
-  width:100% ;
-  background: #ffffff;
-  line-height: 23px;
-  font-weight: 600;
-  max-width: 1126px;
-  height: 90px;
+
+.navbar{
+  position: fixed;
+  z-index: 5;
+  width: 100%;
+  padding: 20px ;
+  background: #F4F3F5 ;
+   
 }
 
-li,
-a {
-  font-family: "Questrial", Helvetica, Arial, Lucida, sans-serif;
-  font-size: 14px;
-  color: #666666;
-  line-height: 23px;
-  text-decoration: none;
+.navbar .nav__list{
+  display: inline-flex;
 }
+
+.navbar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav__list li{
+  list-style: none;
+  
+  }
 
 .logo {
   cursor: pointer;
-  margin-right: auto;
+  margin-right: 20px;
+  font-size: 30px;
+  font-weight: 500;
 }
 
-.nav__list {
-  list-style: none;
-}
-
-.nav__list li {
-  display: inline-block;
-  padding: 0 20px;
-}
-
-.nav__list li a {
-  transition: all 0.3s ease-in-out;
-}
+.nav__list li a {font-family: "Questrial", Helvetica, Arial, Lucida, sans-serif;
+  font-size: 18px;
+  line-height: 23px;
+  text-decoration: none;
+  font-weight: 400;
+  margin-right: 20px;
+  transition: all 0.3s ease;
+  }
 
 .nav__list li a:hover {
   border-bottom: 2px solid #dd3435;
 }
 
-input {
-  margin-left: 20px;
+
+@media(max-width:868px){
+  .navbar .nav__list{
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    max-width: 400px;
+    background: #F4F3F5 ;
+    display: block;
+    padding: 40px 0;
+    text-align: center;
+
+  }
+  .navbar.show .nav__list{
+    left:0%
+  }
+  .navbar .nav__list li{
+    margin-top:65px;
+  }
+  .navbar .nav__list li a{
+    font-size:23px ;
+    margin-left: -100px;
+    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55); ;
+  }
+
+   
 }
+
+
+
+
+  
+
+
+
+
+
+
+
+
 
 /*TopSection*/
 .main {
@@ -100,7 +141,7 @@ input {
   margin-left: auto;
   margin-right: auto;
   height: 665px;
-  background-color:#F4F3F5 ;
+  background-color: #ECD8D1;
 padding:1 rem ;}
 
 .intro{
