--- a/src/App.css
+++ b/src/App.css
@@ -12,20 +12,29 @@
 }
 
 .footer__copy {
-  max-width: 1080px;
+padding: 20px;
   display: flex;
   justify-content: flex-start;
-  background-color: rgba(0, 0, 0, 0.32);
-  color: #666;
+  background-color:#F4EEE6;
+  color:#000000;
+  font-size: 20px;
+  font-family:  'Montserrat', sans-serif;
+  font-weight: 600;
+  line-height: 21px;
+  width: 100%;
+  
 }
 
 .footer {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   width: 100%;
-  align-items: center;
+  
   background: #000000;
 }
+
+
 
 .footer__column {
   width: calc(100% / 3);
@@ -90,7 +99,7 @@ p {
 }
 
 
-@media(max-width:868px){
+@media(max-width:900px){
   .navbar .nav__list{
     display: block;
     position: fixed;
@@ -117,7 +126,6 @@ p {
     transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55); ;
   }
 
-   
 }
 
 
@@ -141,7 +149,7 @@ p {
   margin-left: auto;
   margin-right: auto;
   height: 665px;
-  background-color: #ECD8D1;
+  background-color:#F4F3F5;
 padding:1 rem ;}
 
 .intro{
@@ -154,8 +162,9 @@ padding:1 rem ;}
 
 img{
   border: 5px;
-  margin: auto;
-max-width: 390px;
+  margin: auto ;
+max-width: 350px;
+display: block;
 
 
 }
@@ -178,6 +187,47 @@ font-family: "Roboto",sans-serif;
 /*Body*/
 .body{
 width: 100%;
-height:300px;
-background:#ECD8D1;
+height:500px;
+background:#F4EEE6;
+
 }
+
+/*Body*/
+.body{
+  display: block;
+  text-align: center;
+
+}
+
+.body__heading{
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  color: #000000;
+  padding:40px ;
+  
+  
+}
+
+.body_row{
+  display: flex;
+  justify-content: space-between;
+   padding: 2px 16px;
+    
+}
+
+.card__a,
+.card__b,
+.card__c{
+ box-shadow: 10px 4px 10px 4px rgba(0,0,0,0.1);
+  transition: 0.3s;
+  padding: 20px 0 25px 0;
+}
+
+.card__title{
+  font-size: 20px;
+  padding: 10px;
+
+}
+
+
