--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,10 @@
   display: flex;
   justify-content: space-around;
   max-width: 1080px;
-  
+  width: 100%;
 }
 
 .footer__copy {
-
   padding: 10px;
   display: flex;
   justify-content: flex-start;
@@ -38,48 +37,56 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-align-items: center;
+  align-items: center;
   background: #000000;
+  min-height: 300px;
 }
 
 .footer__column {
   width: calc(100% / 3);
-  
 }
 
 
-.footer h3 {
+.social__icons {
+  display: flex;
+}
+
+.footer__section__title{
   font-family: cooperboldbt;
   font-weight: 500;
   color: #f4b995;
-  padding: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .footer p {
   color: #ababab;
 }
 
-
-
 /*NavBar*/
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 
 .navbar {
-  position: fixed;
-  z-index: 5;
   width: 100%;
   padding: 20px;
+  background: #f4f3f5;
+  display: flex;
+  justify-content: space-between;
+  max-width: 1080px;
+}
+
+.header {
+  position: fixed;
+  top: 0px;
+  z-index: 5;
+  width: 100%;
+  display: flex;
+  justify-content: center;
   background: #f4f3f5;
 }
 
 .navbar .nav__list {
   display: inline-flex;
-}
-
-.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .nav__list li {
@@ -137,12 +144,12 @@ align-items: center;
 /*TopSection*/
 .main {
   display: flex;
-  width: 1425px;
+  width: 1080px;
   justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
   height: 665px;
-  background-color: #f4f3f5;
+  /*background-color: #f4f3f5;*/
   padding: 1 rem;
 }
 
@@ -179,23 +186,33 @@ img {
 /*Body*/
 .body {
   width: 100%;
-  height: 500px;
-  background: #f4eee6;
-  display: block;
-  text-align: center;
+  /*height: 500px;*/
+  /*background: #f4eee6;*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 75px;
 }
 
 /*Body*/
 
 .body__heading {
+  max-width: 1080px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   font-size: 20px;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   color: #000000;
-  padding: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  width: 100%;
 }
 
 .body_row {
+  max-width: 1080px;
   display: flex;
   justify-content: space-between;
   padding: 2px 16px;
@@ -204,9 +221,14 @@ img {
 .card__a,
 .card__b,
 .card__c {
-  box-shadow: 10px 4px 10px 4px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 10px 4px 10px 4px rgba(0, 0, 0, 0.1);*/
   transition: 0.3s;
-  padding: 20px 0 25px 0;
+  padding: 20px 10px 25px 10px;
+}
+
+.card__b,
+.card__c {
+  margin-left: 5px;
 }
 
 .card__title {
