--- a/src/App.css
+++ b/src/App.css
@@ -244,7 +244,25 @@ img {
     margin-bottom: 10px;
 }
 
+/*Main*/
+
 .main{
-   max-width: 1080px;
-  background: #f4f3f5 ;
+ padding-top: 40px;
+ padding-bottom: 40px;
+  width: 100%;
+  background:#f4f3f5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 75px;
+}
+
+
+.main__wrapper{
+  max-width: 1080px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
