--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@ img {
 }
 
 /*Body*/
-.body {
+.form,.body {
   width: 100%;
   /*height: 500px;*/
   /*background: #f4eee6;*/
@@ -264,5 +264,5 @@ img {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
