--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,8 @@ img {
 }
 
 /*Body*/
-.form,.body {
+
+.body {
   width: 100%;
   /*height: 500px;*/
   /*background: #f4eee6;*/
@@ -266,3 +267,30 @@ img {
   flex-direction: column;
   align-items: flex-start;
 }
+
+/*Form*/
+.form{
+   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+ 
+}
+
+.form__heading{
+  font-family: cooperboldbt;
+  font-size: 30px;
+  
+  font-weight: 500;
+padding: 10px;
+}
+
+.form form{
+  padding: 30px 0 0 0;
+}
+
+ form .input__name{display: flex;
+margin: 32px 0;}
