--- a/src/App.css
+++ b/src/App.css
@@ -46,12 +46,11 @@
   width: calc(100% / 3);
 }
 
-
 .social__icons {
   display: flex;
 }
 
-.footer__section__title{
+.footer__section__title {
   font-family: cooperboldbt;
   font-weight: 500;
   color: #f4b995;
@@ -142,7 +141,7 @@
 }
 
 /*TopSection*/
-.top__section{
+.top__section {
   display: flex;
   width: 1080px;
   justify-content: space-between;
@@ -176,7 +175,7 @@ img {
 
 .title {
   font-family: "Roboto", sans-serif;
-  color:#e6739f;
+  color: #e6739f;
   font-size: 40px;
   text-align: center;
   padding-bottom: auto;
@@ -197,7 +196,7 @@ img {
 }
 
 /*Body*/
-
+.section__wrapper,
 .body__heading {
   max-width: 1080px;
   display: flex;
@@ -238,20 +237,20 @@ img {
   text-align: center;
 }
 
-.icon__card{
-      width: 70px;
-    height: 70px;
-    border-radius: 400px;
-    margin-bottom: 10px;
+.icon__card {
+  width: 70px;
+  height: 70px;
+  border-radius: 400px;
+  margin-bottom: 10px;
 }
 
 /*Main*/
 
-.main{
- padding-top: 40px;
- padding-bottom: 40px;
+.main {
+  padding-top: 40px;
+  padding-bottom: 40px;
   width: 100%;
-  background:#f4f3f5;
+  background: #f4f3f5;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -259,8 +258,7 @@ img {
   margin-top: 75px;
 }
 
-
-.main__wrapper{
+.main__wrapper {
   max-width: 1080px;
   display: flex;
   justify-content: center;
@@ -271,49 +269,59 @@ img {
 /*Main*/
 
 .calendar {
-    margin-bottom: 10px;
-       margin-top: 10px;
-       padding: 20px;  
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 20px;
 }
 
-   .btn__body{     background: #000000;
-    color: #fff;
-    border: none;
-    padding: 0 5%;
-    border-radius: 10px;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 44px;
-    
-    font-family: " cooperboldbt",sans-serif;
-    font-weight: 400px; 
-    cursor: pointer;
-     }
-  
+.btn__body {
+  background: #000000;
+  color: #fff;
+  border: none;
+  padding: 0 5%;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 44px;
+  font-family: " cooperboldbt", sans-serif;
+  font-weight: 400px;
+  cursor: pointer;
+}
 
 /*Form*/
-.form{
-   width: 100%;
+.form {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
- 
 }
 
-.form__heading{
+.form__heading {
   font-family: cooperboldbt;
   font-size: 30px;
-  
   font-weight: 500;
-padding: 10px;
+  padding: 10px;
 }
 
-.form form{
+.form form {
   padding: 30px 0 0 0;
 }
 
- form .input__name{display: flex;
-margin: 32px 0;}
+form .input__name {
+  display: flex;
+  margin: 32px 0;
+}
+
+/*BottomSection*/
+.main__section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
