--- a/src/App.css
+++ b/src/App.css
@@ -152,14 +152,6 @@
   padding: 1 rem;
 }
 
-.intro {
-  text-align: center;
-  line-height: 24px;
-  padding-top: 200px;
-  padding-bottom: 175px;
-  display: flex-start;
-}
-
 img {
   border: 5px;
   margin: auto;
@@ -297,6 +289,8 @@ img {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
+
+  
 }
 
 .form__heading {
@@ -304,15 +298,69 @@ img {
   font-size: 30px;
   font-weight: 500;
   padding: 10px;
+  text-align: center;
 }
 
-.form form {
-  padding: 30px 0 0 0;
+.form .form__row{
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(autofit,minmax(300px,1fr));
 }
 
-form .input__name {
-  display: flex;
-  margin: 32px 0;
+.form .form__row .col{
+  position: relative;
+  width: 100%;
+  padding: 0 10px;
+  margin: 30px 0 10px;
+  transition: 0.5s;
+}
+
+.form .form__row .form__input{
+  position: relative;
+  width: 100%;
+  height: 40px;
+color: tomato;
+}
+
+.form .form__row .form__input input{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  box-shadow: none;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  padding: 0 10px;
+}
+
+.form .form__row .form__input .text{
+  position: absolute;
+  top: 0;
+  left: 0;
+  line-height: 40px;
+  font-size: 18px;
+  padding: 0 10px;
+  display: block;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.form .form__row .form__input input:focus + .text,
+.form .form__row .form__input input:valid + .text{
+top: -35px;
+left: -10px;
+}
+
+.form .form__row .form__input .line{
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #dd3435;
+  transition: 0.5s;
 }
 
 /*BottomSection*/
@@ -324,4 +372,6 @@ form .input__name {
   justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
+  z-index: 1;
+  color: #000000;
 }
