--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,8 @@
 
 .social__icons {
   display: flex;
+  padding: 0 10px 0 15px;
+  
 }
 
 .footer__section__title {
@@ -303,14 +305,14 @@ img {
 
 .form .form__row{
   position: relative;
-  width: 100%;
+  width: 50%;
   display: grid;
   grid-template-columns: repeat(autofit,minmax(300px,1fr));
 }
 
 .form .form__row .col{
   position: relative;
-  width: 100%;
+  width: 80%;
   padding: 0 10px;
   margin: 30px 0 10px;
   transition: 0.5s;
@@ -320,7 +322,7 @@ img {
   position: relative;
   width: 100%;
   height: 40px;
-color: tomato;
+color:#E6739F;
 }
 
 .form .form__row .form__input input{
