--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ img {
 .card__a,
 .card__b,
 .card__c {
-  /* box-shadow: 10px 4px 10px 4px rgba(0, 0, 0, 0.1);*/
+
   transition: 0.3s;
   padding: 20px 10px 25px 10px;
 }
@@ -68,10 +68,6 @@ img {
   margin-left: 5px;
 }
 
-.card__title {
-  font-size: 20px;
-  text-align: center;
-}
 
 .icon__card {
   width: 70px;
@@ -80,7 +76,6 @@ img {
   margin-bottom: 10px;
 }
 
-/*Main*/
 
 /*Main*/
 
@@ -107,6 +102,7 @@ img {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
+  background:#000000;
 }
 
 .form__heading {
@@ -115,6 +111,7 @@ img {
   font-weight: 500;
   padding: 10px;
   text-align: center;
+  color: #e6739f;
 }
 
 .form .form__row {
@@ -149,6 +146,8 @@ img {
   outline: none;
   font-size: 18px;
   padding: 0 10px;
+  z-index: 1;
+  color: #e6739f;
 }
 
 .form .form__row .form__input .text {
@@ -175,8 +174,33 @@ img {
   display: block;
   width: 100%;
   height: 2px;
-  background: #dd3435;
+  background: #e6739f;
   transition: 0.5s;
+  border-radius: 2px;
+pointer-events: none;
 }
 
-/*BottomSection*/
+.form .form__row .form__input input:focus ~ .line,
+.form .form__row .form__input input:valid ~ .line{
+  height: 100%;
+} 
+
+.form .form__row .form__input textarea{
+  position: relative;
+  width: 100%;
+  height: 100px;
+  padding: 10px 0;
+}
+
+.form .form__row .form__input .textarea textarea{
+  height: 100%;
+  resize: none;
+}
+
+.form .form__row .form__input textarea:focus + .text,
+.form .form__row .form__input textarea:valid + .text{
+  top: -35px;
+  left:-10px;
+}
+
+
