--- a/src/App.css
+++ b/src/App.css
@@ -7,38 +7,6 @@
 
 
 
-/*@media (max-width: 900px) {
-  .navbar .nav__list {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    max-width: 400px;
-    background: #f4f3f5;
-    display: block;
-    padding: 40px 0;
-    text-align: center;
-  }
-  .navbar.show .nav__list {
-    left: 0%;
-  }
-  .navbar .nav__list li {
-    margin-top: 65px;
-  }
-  .navbar .nav__list li a {
-    font-size: 23px;
-    margin-left: -100px;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-}*/
-
-
-
-
-
-
 
 input::placeholder {
   color: white;
@@ -54,6 +22,18 @@ textarea::placeholder {
 }
 
 
-
+@media screen and (min-width: 992px){
+  .main{
+    display: grid;
+    grid-template-columns:repeat(2, 1fr);
+}
+.about__left{
+  position: relative;
+}
+.left__content{
+  position: absolute;
+  right:-50px;
+}
+}
 
 
