Addng Contact Form

--- a/src/App.css
+++ b/src/App.css
@@ -22,18 +22,13 @@ textarea::placeholder {
 }
 
 
-@media screen and (min-width: 992px){
-  .main{
-    display: grid;
-    grid-template-columns:repeat(2, 1fr);
-}
-.about__left{
-  position: relative;
-}
-.left__content{
-  position: absolute;
-  right:-50px;
-}
-}
 
+input,textarea{
+  display:block;
+  height:100%;
+  width: 100%;
+  border:none;
+  font-size:17px;
+  border-bottom: 2px solid rgba(0,0,0,0.12);
+}
 
