--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,10 @@ body {
     sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
- /* font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)))*/;
+  line-height: 1.25;
+  font-size:1.125rem;
+   font-family: Questrial, Helvetica, Arial, Lucida, sans-serif;
 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
